Changelog for Beam-Minion

{{ $NEXT }}

    [Fixed]

    - Fixed tests that fail when BEAM_MINION environment variable is set
    - Fixed worker only loading one container file instead of all
      container files

0.008     2017-09-17 18:00:34-05:00 America/Chicago

    [Fixed]

    - Fixed minimum version of Getopt::Long prerequisite

0.007     2017-09-17 17:54:51-05:00 America/Chicago

    [Changed]

    - The worker is now able to run tasks from all containers by
      default. This opens up Minion queues to be used for other
      purposes, such as prioritization and partitioning jobs.

    - BREAKING CHANGE: The `Beam::Minion::enqueue` method now accepts an
      arrayref of args and a hashref of options. Previously, the
      arguments were allowed as a list, but this prevented us from
      adding the options hashref.

    [Added]

    - Added options to the `beam minion run` command to set job
      auto-retry, job delay, and job priority.

    [Fixed]

    - Added better exception handling to Minion jobs. Now if the service
      dies during construction, or the `run` method throws an exception,
      the job result will reflect this and show the exception.

0.006     2017-08-22 18:48:33-05:00 America/Chicago

    [Fixed]

    - Fixed issue with passing plain DBI DSNs: The backend expects
      a list of arguments, not an arrayref of arguments.

    - Moved log to STDERR. This is temporary until we can come up with
      some more robust logging configuration (probably Log::Any)

0.005     2017-08-19 21:42:31-05:00 America/Chicago

    [Fixed]

    - Fixed raw Minion args to allow passing plain DBI DSNs. This allows
      me to use the `mysql_read_defaults_file` DBD::mysql configuration.

0.004     2017-08-14 13:01:07-05:00 America/Chicago

    [Added]

    - Added `enqueue` Perl API to the Beam::Minion module. This makes it
      easier to add jobs via Perl instead of using the command-line (or
      the command class)

    [Fixed]
